# Bot_tg_diary

./: .coverage  .env example  .gitignore  README.md  bot.py  heandlers.py  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
db/: models.py  session.py
handlers/: add.py  delete.py  edit.py  find.py  list.py  start.py
heandlers/: __init.py  delete.py  start.py
tests/: test_add.py  test_delete.py  test_edit.py  test_find.py  test_list.py  test_start.py
