[tool.poetry]
name = "bot-tg-diary"
version = "0.1.0"
description = ""
authors = ["Maxim Proskurin <Mx.prskn@yandex.ru>"]
readme = "README.md"
packages = [{ include = "handlers" }, { include = "db" }]

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "^3.21.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
python-dotenv = "^1.1.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
flake8 = "^7.3.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"